frontend/test/should_fail/computations_no_procb.grg
function bar() : int
{
	add(Node);
	return(42);
}
